--- a/style.html
+++ b/style.html
@@ -25,7 +25,7 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #3B4554;
+            --em-uso-base: #001c45;
             --em-uso-border-color: color-mix(in srgb, var(--em-uso-base) 70%, black 30%);
             --em-uso-card-bg: linear-gradient(145deg,
                 color-mix(in srgb, var(--em-uso-base) 96%, black 4%),
@@ -1523,6 +1523,14 @@
         }
         .armario-card.em-uso .armario-details {
             color: color-mix(in srgb, var(--em-uso-text) 85%, transparent);
+        }
+        .armario-paciente .armario-paciente-nome {
+            font-size: 1.05rem;
+            font-weight: 800;
+            letter-spacing: 0.01em;
+        }
+        .armario-card.em-uso .armario-paciente .armario-paciente-nome {
+            color: var(--em-uso-text);
         }
         .armario-pront-leito {
             display: flex;
