--- a/style.html
+++ b/style.html
@@ -25,14 +25,14 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #001c45;
+            --em-uso-base: #c6cacf;
             --em-uso-border-color: color-mix(in srgb, var(--em-uso-base) 70%, black 30%);
             --em-uso-card-bg: linear-gradient(145deg,
                 color-mix(in srgb, var(--em-uso-base) 96%, black 4%),
                 color-mix(in srgb, var(--em-uso-base) 92%, white 8%));
             --em-uso-badge-bg: color-mix(in srgb, var(--em-uso-base) 65%, white 35%);
-            --em-uso-badge-text: #ffffff;
-            --em-uso-text: #ffffff;
+            --em-uso-badge-text: #000929;
+            --em-uso-text: #000929;
             --extended-badge-bg: color-mix(in srgb, var(--primary-color) 14%, white 86%);
             --extended-badge-text: color-mix(in srgb, var(--primary-color) 80%, black 20%);
             --extended-row-bg: color-mix(in srgb, var(--primary-color) 10%, white 90%);
