--- a/style.html
+++ b/style.html
@@ -25,14 +25,12 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #0d2f67;
-            --em-uso-border-color: color-mix(in srgb, var(--em-uso-base) 65%, white 35%);
-            --em-uso-card-bg: linear-gradient(145deg,
-                color-mix(in srgb, var(--em-uso-base) 94%, black 6%),
-                color-mix(in srgb, var(--em-uso-base) 88%, white 12%));
-            --em-uso-badge-bg: color-mix(in srgb, var(--em-uso-base) 72%, white 28%);
-            --em-uso-badge-text: #f6f8ff;
-            --em-uso-text: #f6f8ff;
+            --em-uso-base: #001c45;
+            --em-uso-border-color: color-mix(in srgb, #001c45 50%, #c6cacf 50%);
+            --em-uso-card-bg: linear-gradient(145deg, #001c45 0%, #c6cacf 100%);
+            --em-uso-badge-bg: color-mix(in srgb, #c6cacf 70%, #001c45 30%);
+            --em-uso-badge-text: #000929;
+            --em-uso-text: #000929;
             --extended-badge-bg: color-mix(in srgb, var(--primary-color) 14%, white 86%);
             --extended-badge-text: color-mix(in srgb, var(--primary-color) 80%, black 20%);
             --extended-row-bg: color-mix(in srgb, var(--primary-color) 10%, white 90%);
@@ -1313,14 +1311,15 @@
         .armario-card.em-uso {
             position: relative;
             overflow: hidden;
-            border-left-color: #ffffff;
-            background-color: var(--em-uso-base);
-            background-image: repeating-linear-gradient(135deg,
-                rgba(255, 255, 255, 0.05) 0,
-                rgb(255 255 255 / 0%) 12px,
-                #00000008 12px,
-                #00000000 24px);
-            color: #7f6262;
+            border-left-color: var(--em-uso-border-color);
+            background-image:
+                repeating-linear-gradient(135deg,
+                    rgba(0, 9, 41, 0.08) 0,
+                    rgba(0, 9, 41, 0) 12px,
+                    rgba(0, 9, 41, 0.08) 12px,
+                    rgba(0, 9, 41, 0) 24px),
+                var(--em-uso-card-bg);
+            color: var(--em-uso-text);
             box-shadow: 0 14px 32px color-mix(in srgb, var(--em-uso-border-color) 30%, transparent);
         }
         .armario-card.em-uso::before {
