--- a/style.html
+++ b/style.html
@@ -25,10 +25,10 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #001c45;
-            --em-uso-border-color: color-mix(in srgb, #001c45 50%, #c6cacf 50%);
-            --em-uso-card-bg: #001c45;
-            --em-uso-badge-bg: color-mix(in srgb, #c6cacf 70%, #001c45 30%);
+            --em-uso-base: #c6cacf;
+            --em-uso-border-color: color-mix(in srgb, #c6cacf 70%, #000929 30%);
+            --em-uso-card-bg: #c6cacf;
+            --em-uso-badge-bg: color-mix(in srgb, #c6cacf 70%, #000929 30%);
             --em-uso-badge-text: #000929;
             --em-uso-text: #000929;
             --extended-badge-bg: color-mix(in srgb, var(--primary-color) 14%, white 86%);
@@ -1485,7 +1485,7 @@
         }
         .status-em-uso .fa-user-clock,
         .status-em-uso .fas.fa-user-clock {
-            color: #001c45;
+            color: #000929;
         }
         .armario-card.em-uso .status-em-uso {
             background-color: #c6cacf;
