Improve user clock icon contrast

--- a/style.html
+++ b/style.html
@@ -69,7 +69,7 @@
             touch-action: none;
         }
         .fa-user-clock, .fas.fa-user-clock {
-            color: #dfe3eb;
+            color: var(--primary-dark);
         }
         /* Textura de cédula */
         body::before {
