--- a/style.html
+++ b/style.html
@@ -27,7 +27,7 @@
             --sidebar-width: 250px;
             --em-uso-base: #c6cacf;
             --em-uso-border-color: color-mix(in srgb, #c6cacf 70%, #000929 30%);
-            --em-uso-card-bg: #c6cacf;
+            --em-uso-card-bg: color-mix(in srgb, #c6cacf 92%, white 8%);
             --em-uso-badge-bg: color-mix(in srgb, #c6cacf 70%, #000929 30%);
             --em-uso-badge-text: #000929;
             --em-uso-text: #000929;
@@ -1068,8 +1068,8 @@
             position: relative;
             border-top: 4px solid var(--em-uso-border-color);
             background: radial-gradient(circle at 50% 40%,
-                    color-mix(in srgb, var(--em-uso-card-bg) 55%, white 45%) 0%,
-                    color-mix(in srgb, var(--em-uso-card-bg) 85%, white 15%) 45%,
+                    color-mix(in srgb, var(--em-uso-card-bg) 52%, white 48%) 0%,
+                    color-mix(in srgb, var(--em-uso-card-bg) 82%, white 18%) 45%,
                     var(--em-uso-card-bg) 100%);
             color: var(--em-uso-text);
             overflow: hidden;
